--- a/style.css
+++ b/style.css
@@ -102,3 +102,27 @@ img#duck:hover{
     bottom: -60px;
     right:0;
 }
+p#mc_text {
+    color: #FFD166;
+    rotate: 35deg;
+    position: absolute;
+    right: 15%;
+    top:10%;
+    text-shadow: 2px 2px #073B4C;
+}
+
+.pulse {
+    animation: pulse-animation 1s infinite;
+}
+
+@keyframes pulse-animation {
+    0% {
+        transform: scale(0.6);
+      }
+      50% {
+        transform: scale(1);
+      }
+        100% {
+        transform: scale(0.6);
+      }
+  }
