--- a/style.css
+++ b/style.css
@@ -14,7 +14,10 @@ body{
 h1#title{
     font-family: "Aharoni", sans-serif;
     color: #06D6A0;
-    font-size: 10vw;
+    font-size: 150px;
+    @media screen only {
+        
+    }
     margin-bottom: 0;
     padding-bottom: 0;
     padding-top: 5vh;
@@ -23,7 +26,7 @@ h1#title{
 
 div#headboard{
     text-align: center;
-    font-size: 2vw;
+    font-size: 20px;
     font-weight: 600;
     padding-top: 0;
     margin-top: 5vh;
@@ -101,4 +104,41 @@ img#duck{
 img#duck:hover{
     bottom: -60px;
     right:0;
+}
+p#mc_text {
+    color: #FFD166;
+    rotate: 35deg;
+    position: absolute;
+    right: 20%;
+    top:10%;
+    text-shadow: 2px 2px #073B4C;
+}
+
+.pulse {
+    animation: pulse-animation 1s infinite;
+}
+
+@keyframes pulse-animation {
+    0% {
+        transform: scale(0.6);
+      }
+      50% {
+        transform: scale(1);
+      }
+        100% {
+        transform: scale(0.6);
+      }
+  }
+
+  @media only screen and (max-width: 767px) {  
+    div.content {
+        width: 80vw;
+    }
+    p#mc_text {
+        display: none;
+    }
+    img#duck{
+        display: none;
+    }
+
 }
